NXP-27278: Cleanup / Format